--- a/melancia.html
+++ b/melancia.html
@@ -103,7 +103,11 @@
             from {
                 left: 30%;
                 top: 40%;
-                
+
+            }
+            to {
+                left: 45%;
+                top: 50%;
             }
         }
     </style>
