--- a/melancia.html
+++ b/melancia.html
@@ -121,5 +121,8 @@
         <div class="seed5"></div>
         <div class="cut-2"></div>
     </div>
+    <footer>
+        <i>&copy;Ana Caroline Ferreira 21.08.2023</i>
+    </footer>
 </body>
 </html>
