--- a/melancia.html
+++ b/melancia.html
@@ -121,7 +121,7 @@
         <div class="seed5"></div>
         <div class="cut-2"></div>
     </div>
-    <footer>
+    <footer style="font: 20px Arial;">
         <i>&copy;Ana Caroline Ferreira 21.08.2023</i>
     </footer>
 </body>
